# nnfun

./: CMakeLists.txt  README.md
docs/: data_structure_ideas.txt  how_to_use_multi_layer_nn.txt  how_to_use_neuralnetwork.hh.txt  tempo representation.txt
etc/: cflags.cmake  tests.cmake
progress_reports/: 04_13_2022.txt  04_20_2022.txt  04_27_2022.txt  05_11_2022.txt  05_18_2022.txt  06_14_2022.txt
src/audio/: CMakeLists.txt  midi_processor.cc  midi_processor.hh
src/benchmark/forward_propagation/: CMakeLists.txt  benchmark_1.cc  benchmark_2.cc  benchmark_3.cc  benchmark_4.cc  benchmark_5.cc  benchmark_6.cc
src/frontend/: CMakeLists.txt  all_in_one.cc  all_in_one_leaky.cc  arch_testing.cc  back_propagation.cc  back_propagation_formula.cc  back_propagation_formula_check.cc  back_propagation_numerical.cc  big_nn_1.cc  big_nn_1_weights.txt  bishko.cc  compare_eta.cc  compare_weights.cc  complex-test.cc  concatenate.cc  eighteen_outputs.cc  example1.cc  first_step_16_inputs.cc  forward_propagation.cc  grant_all_in_one_leaky_predict_next_time_stamp.cc  grant_leaky_weights.txt  grant_predict_tempo_from_seconds_no_noise.cc  grant_predict_tempo_midi_continuous.cc  grant_tiny_nn.cc  grant_tiny_nn2.cc  grant_trial_weights.txt  hand_linked.cc  holy_part1_weights.txt  holy_part2_weights.txt  holyweights.txt  layer_access.cc  leaky_weights.txt  multi_layer_nn_template.cc  neuralnetwork.cc  nn1_weights  nn2_weights  param_test.cc  predict_60_over_x_no_noise.cc  predict_60_over_x_with_noise.cc  predict_beat.cc  (+22 more)
src/frontend/linear_predictor/: CMakeLists.txt
src/nn/: CMakeLists.txt  grant_network.hh  grant_neuralnetwork.hh  layer.cc  layer.hh  network.hh  neuralnetwork.cc  neuralnetwork.hh
src/tests/: CMakeLists.txt  eigentest1.cc  formulagradienttest1.cc  formulagradienttest2.cc
