macro (add_test_exec exec_name)
    add_executable ("${exec_name}" "${exec_name}.cc")
    target_link_libraries ("${exec_name}" util audio ${Eigen_LDFLAGS} ${Eigen_LDFLAGS_OTHER})
endmacro (add_test_exec)

add_test_exec (forward_propagation)
add_test_exec (back_propagation_numerical)
add_test_exec (back_propagation_formula)
add_test_exec (back_propagation_formula_check)
add_test_exec (back_propagation)
# add_executable (neuralnetwork "neuralnetwork.cc")

add_test_exec (first_step_16_inputs)
add_test_exec (predict_tempo_no_noise)
add_test_exec (predict_tempo_with_noise)
add_test_exec (predict_tempo_midi_input)
