macro (add_test_exec exec_name)
    add_executable ("${exec_name}" "${exec_name}.cc")
    target_link_libraries ("${exec_name}" util ${Eigen_LDFLAGS} ${Eigen_LDFLAGS_OTHER})
endmacro (add_test_exec)

add_test_exec (forward_propagation)
add_test_exec (back_propagation_numerical)
add_test_exec (back_propagation_formula)
add_test_exec (back_propagation_formula_check)
add_test_exec (back_propagation)
# add_executable (neuralnetwork "neuralnetwork.cc")

add_subdirectory ("./linear_predictor")
#add_test_exec (first_step_16_inputs)
#add_test_exec (predict_tempo_no_noise)
#add_test_exec (predict_tempo_with_noise)

#add_test_exec (predict_inverse_x_two_layers_1)
#add_test_exec (predict_inverse_x_one_layer_1)
#add_test_exec (multi_layer_nn_template)
add_test_exec (test_new_class)
#add_test_exec (predict_inverse_256)
#add_test_exec (predict_tempo_w_abstraction)
#add_test_exec (predict_60_over_x_no_noise)
#add_test_exec (predict_60_over_x_with_noise)
#add_test_exec (grant_predict_tempo_from_seconds_no_noise)
#add_test_exec (predict_tempo_from_seconds_with_noise)
#add_test_exec (layer_access)
#add_test_exec (predict_seconds_from_seconds_no_noise)
#add_test_exec (predict_seconds_from_seconds_with_noise)
#add_test_exec (predict_seconds_from_seconds_with_noise_and_offset)
#add_test_exec (all_in_one)
#add_test_exec (hand_linked)
add_test_exec (bishko)
#add_test_exec (param_test)
#add_test_exec (big_nn_1)
#add_test_exec (all_in_one_leaky)
#add_test_exec (compare_weights)
add_test_exec (arch_testing)
add_test_exec (eighteen_outputs)
add_test_exec (small_output)